Reduce font size of employment start dates to solve lack of spacing issue when I include the stat/end month

--- a/droplet/static/css/cv_style_pdf.css
+++ b/droplet/static/css/cv_style_pdf.css
@@ -49,6 +49,7 @@ dt {
     float: left;
     clear: left;
     font-weight: bold;
+    font-size: 14px;
 }
 dd {
     margin-left: 17%;
